--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@ionic/vue": "^8.5.6",
     "@ionic/vue-router": "^8.5.6",
     "core-js": "^3.8.3",
